CMAKE_MINIMUM_REQUIRED(VERSION 3.0.2)
project(iec61850Explorer)
option(BUILD_GUI "Build GUI (Requires Qt5)" ON)

SET(EXP_VERSION_MAJOR 0)
SET(EXP_VERSION_MINOR 1)
SET(EXP_VERSION_PATCH 0)
file(WRITE iec61850Exp_version.h "#define IECEXP_VERSION \"${EXP_VERSION_MAJOR}.${EXP_VERSION_MINOR}.${EXP_VERSION_PATCH}\"\n")
IF(WIN32)
	link_directories(third_party/winpcap)
	link_directories(third_party/libiec61850/lib)
	include_directories(third_party/libiec61850/include)
ENDIF()
add_executable(iec61850Explorer iec61850Explorer.cpp iec61850Exp_fun.cpp)
target_link_libraries(iec61850Explorer iec61850 pthread)

add_executable(iec61850_varCmd iec61850_varCmd.cpp)
target_link_libraries(iec61850_varCmd iec61850 pthread)

add_executable(iec61850_testsrv iec61850_testsrv.c)
target_link_libraries(iec61850_testsrv iec61850 pthread)

IF(BUILD_GUI)
	find_package(Qt5Widgets REQUIRED)
	include_directories(${Qt5Widgets_INCLUDES})
	add_executable(iec61850ExplorerGUI WIN32 iec61850ExplorerGUI.cpp VariablesListWindow.cpp iec61850Exp_fun.cpp)
	qt5_use_modules(iec61850ExplorerGUI Widgets)
	set_target_properties(iec61850ExplorerGUI PROPERTIES AUTOMOC TRUE)
	target_link_libraries(iec61850ExplorerGUI iec61850 pthread)
ENDIF(BUILD_GUI)
if(WIN32)
	set(LIBDEP_4_WIN wpcap ws2_32 iphlpapi)
	target_link_libraries(iec61850Explorer ${LIBDEP_4_WIN})
	target_link_libraries(iec61850ExplorerGUI ${LIBDEP_4_WIN})
	target_link_libraries(iec61850_testsrv ${LIBDEP_4_WIN})
	target_link_libraries(iec61850_varCmd ${LIBDEP_4_WIN})
endif()

INSTALL(TARGETS iec61850ExplorerGUI RUNTIME DESTINATION bin COMPONENT Applications)
INSTALL(TARGETS iec61850Explorer RUNTIME DESTINATION bin COMPONENT Applications)
INSTALL(TARGETS iec61850_varCmd RUNTIME DESTINATION bin COMPONENT Applications)
# Directives for building package
IF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
INCLUDE(InstallRequiredSystemLibraries)
IF(WIN32)
	#Packaging Qt5 libs:
	GET_TARGET_PROPERTY(QT5Core_LIB_LOCATION Qt5::Core LOCATION_${BUILD_TYPE})
	GET_TARGET_PROPERTY(QT5Gui_LIB_LOCATION Qt5::Gui LOCATION_${BUILD_TYPE})
	GET_TARGET_PROPERTY(QT5Widgets_LIB_LOCATION Qt5::Widgets LOCATION_${BUILD_TYPE})
	INSTALL(FILES ${QT5Core_LIB_LOCATION} ${QT5Gui_LIB_LOCATION} ${QT5Widgets_LIB_LOCATION} DESTINATION bin COMPONENT Applications)
	get_filename_component(QT_DLL_DIR ${QT5Core_LIB_LOCATION} PATH)
	install(FILES
			${QT_DLL_DIR}/../plugins/platforms/qwindows.dll
			DESTINATION bin/platforms COMPONENT Applications
		   )

	#Packaging third party librairies
	find_library(LIBIEC61850_LIBRARY NAMES libiec61850 PATHS third_party/libiec61850/lib)
	message(STATUS "Found LIBIEC61850 in ${LIBIEC61850_LIBRARY}")
	find_library(WPCAP_LIBRARY NAMES wpcap PATHS third_party/winpcap/lib)
	message(STATUS "Found Winpcap in ${WPCAP_LIBRARY}")
	find_library(PACKET_LIBRARY NAMES packet PATHS third_party/winpcap/lib)
	INSTALL(FILES ${PACKET_LIBRARY} ${LIBIEC61850_LIBRARY} ${WPCAP_LIBRARY} DESTINATION bin COMPONENT Applications)

	if( MINGW )
		message( STATUS "Installing system-libraries: MinGW DLLs." )
		get_filename_component( Mingw_Path ${CMAKE_CXX_COMPILER} PATH )
		set( CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS ${Mingw_Path}/libgcc_s_dw2-1.dll ${Mingw_Path}/libstdc++-6.dll ${Mingw_Path}/libwinpthread-1.dll)
	endif( MINGW )

	include( InstallRequiredSystemLibraries )
	if( CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS )
		install( PROGRAMS ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION bin COMPONENT Applications)
	endif( CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS )
	set(CPACK_NSIS_CREATE_ICONS "CreateShortCut '\$SMPROGRAMS\\\\$STARTMENU_FOLDER\\\\iec61850ExplorerGUI.lnk' '\$INSTDIR\\\\bin\\\\iec61850ExplorerGUI.exe'") 
ENDIF(WIN32)
SET(CPACK_PACKAGE_DESCRIPTION "IEC61850-Explorer")
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "IEC61850-Explorer")
SET(CPACK_PACKAGE_VENDOR "IEC61850-Explorer team")
SET(CPACK_PACKAGE_CONTACT "http://github.com/cedricboudinet/iec61850-explorer")
SET(CPACK_PACKAGE_VERSION_MAJOR "${EXP_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${EXP_VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${EXP_VERSION_PATCH}")
SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${EXP_VERSION_MAJOR}.${EXP_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}_${CMAKE_SYSTEM_PROCESSOR}")
SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${EXP_VERSION_MAJOR}.${EXP_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
 
set(CPACK_COMPONENTS_ALL Applications)
set(CPACK_PACKAGE_INSTALL_DIRECTORY "IEC61850-Explorer")
INCLUDE(CPack)
 
ENDIF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
